<resources>
    <string name="app_name"> ব্লাড ব্যাংক বাংলাদেশ  </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_barisal">বরিশাল বিভাগ  </string>
    <string name="title_activity_chittagong">চট্টগাম বিভাগ </string>
    <string name="title_activity_dhaka">ঢাকা বিভাগ </string>
    <string name="title_activity_khulna">খুলনা বিভাগ </string>
    <string name="title_activity_rajshahi">রাজশাহী বিভাগ </string>
    <string name="title_activity_rangpur">রংপুর বিভাগ </string>
    <string name="title_activity_sylhet">সিলেট বিভাগ </string>

    <!-- Cht-->
    <!--<string name="Title">Name: Chittagong Medical College </string>-->
    <!--<string name="Type">Type: Sandhani Blood Bank </string>-->
    <!--<string name="Address">Address: College Campus </string>-->
    <!--<string name="Contact">Contact: +8801812483918 </string>-->

    <string name="call">কল করুন </string>
    <string name="map">গুগল ম্যাপে দেখুন </string>

    <!-- Ctg-->


    <string name="ctg1">

        নামঃ সন্ধানী ব্লাড ব্যাংক \n
        ঠিকানাঃ চট্টগ্রাম মেডিক্যাল কলেজ \n
        যোগাযোগঃ  031-616625 \n

    </string>

    <string name="ctg2">

        নামঃ ফাতেমা বেগম রেড ক্রিসেন্ট ব্লাড ব্যাংক \n
        ঠিকানাঃ ৩৯৫,অন্দরকেল্লা  চট্টগ্রাম   \n
        যোগাযোগঃ  031-620685 \n

    </string>

    <string name="ctg3">

        নামঃ রেলওয়ে হাসপাতাল  ব্লাড ব্যাঙ্ক\n
        ঠিকানাঃ কোঁতয়ালী চট্টগ্রাম, সদর চট্টগাম। \n
        যোগাযোগঃ 031-602220 \n

    </string>

    <string name="ctg4">

        নামঃ পোর্ট হাসপাতাল ব্লাড ব্যাংক\n
        ঠিকানাঃ পোর্ট হাসপাতাল, চট্টগ্রাম\n
        যোগাযোগঃ 031-502024 \n

    </string>

    <!-- Dhk-->
    <string name="dhk1">
        নামঃ বাঁধন ব্লাড ব্যাংক\n
        ঠিকানাঃ বাঁধন, টি.এস.সি (নীচতলা) (জোনাল অফিস) ঢাকা বিশ্ববিদ্যায়ল\n
        যোগাযোগঃ 028629042 \n
    </string>
    <string name="dhk2">
        নামঃ রেড ক্রিসেন্ট ব্লাড ব্যাংক সোসাইটি\n
        ঠিকানাঃ ৬৮৪, ৬৮৬, বড় মগবাজার, ঢাকা।\n
        যোগাযোগঃ 029116563\n
    </string>
    <string name="dhk3">
        নামঃ কোয়ান্টাম ব্লাড ব্যাংক\n
        ঠিকানাঃ ৩১/ডি, শিল্পাচার্য জয়নুল আবেদীন সড়ক (পুরাতন শান্তিনগর) ঢাকা-১২১৭। (ইস্টার্ন প্লাস মার্কেটের পূর্ব পাশে)\n
        যোগাযোগঃ 028322987\n
    </string>
    <string name="dhk4">
        নামঃ পুলিশ ব্লাড ব্যাংক\n
        ঠিকানাঃ কেন্দ্রীয় পুলিশ হাসপাতাল, রাজারবাগ।\n
        যোগাযোগঃ 029362573\n

    </string>
    <string name="dhk5">
        নামঃ রেড ক্রিসেন্ট ব্লাড ব্যাংক সোসাইটি\n
        ঠিকানাঃ ৭/৫, আওরঙ্গজেব রোড, মোহাম্মদপুর, ঢাকা – ১২০৭।\n
        যোগাযোগঃ 028121497\n
    </string>
    <string name="dhk6">
        নামঃ সন্ধানী   ব্লাড ব্যাংক \n
        ঠিকানাঃ সলিমুল্লাহ মেডিক্যাল কলেজ\n
        যোগাযোগঃ 01819284878\n
    </string>

   <string name="dhk7">
        নামঃ সন্ধানী   ব্লাড ব্যাংক \n
        ঠিকানাঃ বাংলাদেশ মেডিক্যাল কলেজ, ধানমণ্ডি, ঢাকা \n
        যোগাযোগঃ 0152423441\n
    </string>

    <string name="dhk8">
        নামঃ সন্ধানী   ব্লাড ব্যাংক \n
        ঠিকানাঃ ঢাকা  মেডিক্যাল কলেজ\n
        যোগাযোগঃ 01819284878\n
    </string>


    <string name="dhk9">
        নামঃ সন্ধানী   ব্লাড ব্যাংক \n
        ঠিকানাঃ ময়মনসিংহ  মেডিক্যাল কলেজ\n
        যোগাযোগঃ 091-54829\n
    </string>

     <string name="dhk10">
        নামঃ সন্ধানী সেন্ট্রাল ব্লাড ব্যাংক \n
        ঠিকানাঃ পিজি হাসপাতাল, শাহাবাগ, ঢাকা \n
        যোগাযোগঃ 02-8621658\n
    </string>

    <string name="dhk11">
        নামঃ সন্ধানী   ব্লাড ব্যাংক \n
        ঠিকানাঃ ঢাকা  মেডিক্যাল কলেজ,বকসি বাজার , ঢাকা \n
        যোগাযোগঃ 02-9668690\n
    </string>


        <string name="dhk12">
        নামঃ ইসলামি ব্যাংক হাসপাতাল  ব্লাড ব্যাংক \n
        ঠিকানাঃ কাকরাইল , ঢাকা \n
        যোগাযোগঃ 02-8317090\n
    </string>

<!--Khulna -->
    <string name="khl1">
        নামঃ সন্ধানী   ব্লাড ব্যাংক \n
        ঠিকানাঃ খুলনা মেডিক্যাল কলেজ\n
        যোগাযোগঃ 041-761509\n
    </string>






































    <string-array name="barisal_bb_address">
        <item>

             &#160;নামঃ শেরে বাংলা মেডিক্যাল কলেজ ব্লাড ব্যাংক\n
             ধরণঃ সন্ধানী ব্লাড ব্যাংক \n
             ঠিকানাঃ মেডিক্যাল কলেজ শাখা \n
             যোগাযোগঃ ০১২৩৪৫৬৭৮ \n

        </item>

        <item>

            &#160;নামঃ পিরোজপুর সদর হাসপাতাল ব্লাড ব্যাংক\n
             ধরণঃ সন্ধানী ব্লাড ব্যাংক\n
             ঠিকানাঃ পিরোজপুর সদর হাসপাতাল \n
             যোগাযোগঃ ০১২৩৪৫৬৭৮\n


        </item>

        <item>

            &#160;নামঃ ঝালকাঠি  সদর হাসপাতাল ব্লাড ব্যাংক\n
             ধরণঃ সন্ধানী ব্লাড ব্যাংক\n
             ঠিকানাঃ ঝালকাঠি  সদর হাসপাতাল \n
             যোগাযোগঃ ০১২৩৪৫৬৭৮\n


        </item>

        <item>

             &#160;নামঃ বরিশাল সদর হাসপাতাল ব্লাড ব্যাংক\n
             ধরণঃ সন্ধানী ব্লাড ব্যাংক\n
             ঠিকানাঃ  সদর হাসপাতাল \n
             যোগাযোগঃ ০১২৩৪৫৬৭৮\n


        </item>




    </string-array>

    <string-array name="chittagong_bb">
        <item>

            নামঃ সন্ধানী ব্লাড ব্যাঙ্ক\n
            ঠিকানাঃ কোঁতয়ালী চট্টগ্রাম, সদর চট্টগাম। \n
            যোগাযোগঃ 031616625 \n
        </item>

        <item>

            নামঃ সন্ধানী ব্লাড ব্যাঙ্ক\n
            ঠিকানাঃ কোঁতয়ালী চট্টগ্রাম, সদর চট্টগাম। \n
            যোগাযোগঃ 031616625 \n
        </item>


    </string-array>
    <string-array name="barisal_bb_contact">
        <item>
            0123456789

        </item>
        <item>
            0123456789

        </item>
        <item>
            0123456789

        </item>
    </string-array>
</resources>
