<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/holo_red_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginTop="20dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@android:color/white"

            android:layout_marginTop="10dp"
            android:gravity="left"
            android:paddingLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/khl1"
            android:id="@+id/tvItem" />

        <LinearLayout

            android:id="@+id/lid1"
            android:layout_below="@+id/tvItem"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button

                android:layout_width="0dp"
                android:layout_weight="2"
                android:onClick="callPhone_khl1"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:id="@+id/call_dhk_2"
                />
            <Button

                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/map"/>
        </LinearLayout>
</RelativeLayout>
 </ScrollView>